--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -1,99 +1,65 @@
-<!-- Copyright (c) Microsoft Corporation. All rights reserved. Licensed under the MIT License. -->
-<!-- This file shows how to design a first-run page that provides a welcome screen to the user about the features of the add-in. -->
-
 <!doctype html>
 <html>
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=Edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Contoso Task Pane Add-in</title>
+    <title>PowerPoint Add-in</title>
 
-    <!-- Office JavaScript API -->
     <script type="text/javascript" src="https://appsforoffice.microsoft.com/lib/beta/hosted/office.js"></script>
-
-    <!-- For more information on Fluent UI, visit https://developer.microsoft.com/fluentui#/. -->
     <link
       rel="stylesheet"
       href="https://res-1.cdn.office.net/files/fabric-cdn-prod_20230815.002/office-ui-fabric-core/11.1.0/css/fabric.min.css"
     />
-
-    <!-- Template styles -->
     <link href="taskpane.css" rel="stylesheet" type="text/css" />
   </head>
-
   <body class="ms-font-m ms-welcome ms-Fabric">
-    <!-- TODO2: Update the header node. -->
-    <header id="content-header">
-      <div class="ms-Grid ms-bgColor-neutralPrimary">
-        <div class="ms-Grid-row">
-          <div class="padding ms-Grid-col ms-u-sm12 ms-u-md12 ms-u-lg12">
-            <div class="ms-font-xl ms-fontColor-white ms-fontWeight-semibold">My PowerPoint add-in</div>
-          </div>
+    <div id="sideload-msg">사이드로드 중...</div>
+    <div id="app-body" style="display: none">
+      <nav class="nav-menu">
+        <button class="nav-button" data-page="main-page">메인</button>
+        <button class="nav-button" data-page="list-page">슬라이드 목록</button>
+        <button class="nav-button" data-page="add-page">슬라이드 추가</button>
+      </nav>
+
+      <div id="message"></div>
+
+      <div id="main-page" class="page">
+        <div class="page-content">
+          <h2>메인 페이지</h2>
+          <button class="ms-Button" id="sign-in">Sign In</button><br /><br />
+          <button class="ms-Button" id="create-folder">Create Folder</button><br /><br />
+          <button class="ms-Button" id="create-powerpoint">Create PowerPoint</button><br /><br />
+          <button class="ms-Button" id="create-json">Create JSON</button><br /><br />
         </div>
       </div>
-    </header>
-    <section id="sideload-msg" class="ms-welcome__main">
-      <h2 class="ms-font-xl">
-        Please
-        <a
-          target="_blank"
-          href="https://learn.microsoft.com/office/dev/add-ins/testing/test-debug-office-add-ins#sideload-an-office-add-in-for-testing"
-          >sideload</a
-        >
-        your add-in to see app body.
-      </h2>
-    </section>
-    <main id="app-body" class="ms-welcome__main" style="display: none">
-      <div class="padding">
-        <!-- Microsoft Graph 관련 버튼들 -->
-        <button class="ms-Button" id="sign-in">Sign In</button><br /><br />
-        <button class="ms-Button" id="create-folder">Create Folder</button><br /><br />
-        <button class="ms-Button" id="create-powerpoint">Create PowerPoint</button><br /><br />
-        <button class="ms-Button" id="create-json">Create JSON</button><br /><br />
-        <button class="ms-Button" id="read-json">Read JSON</button><br /><br />
-        <button class="ms-Button" id="export-selected-slide">Export Selected Slide</button><br /><br />
-        <button class="ms-Button" id="insert-after-selected-slide">Insert After Selected Slide</button><br /><br />
-        <!-- 다른 버튼들 주석 처리 -->
-        <!-- 
-        <button class="ms-Button" id="insert-image">Insert Image</button><br /><br />
-        <button class="ms-Button" id="insert-text">Insert Text</button><br /><br />
-        <button class="ms-Button" id="get-slide-metadata">Get Slide Metadata</button><br /><br />
-        <button class="ms-Button" id="add-slides">Add Slides</button><br /><br />
-        <button class="ms-Button" id="go-to-first-slide">Go to First Slide</button><br /><br />
-        <button class="ms-Button" id="go-to-next-slide">Go to Next Slide</button><br /><br />
-        <button class="ms-Button" id="go-to-previous-slide">Go to Previous Slide</button><br /><br />
-        <button class="ms-Button" id="go-to-last-slide">Go to Last Slide</button><br /><br />
-        <button class="ms-Button" id="get-slide-index">Get Slide Index</button><br /><br />
-        <button class="ms-Button" id="add">Add Selected Slide</button>
-        <button class="ms-Button" id="delete">Delete Selected Slide</button>
-        <br /><br />
-        <button class="ms-Button" id="insert-all">Insert All Slide</button>
-        <button class="ms-Button" id="insert-target">Insert Target Slide</button>
-        -->
-        <!--
-        <section>
-          <p>Select a PowerPoint presentation from which to insert slides</p>
-          <form>
-            <input type="file" id="file" />
-          </form>
-        </section>
-        -->
-        <section>
-          <h3>"TOPIC" 태그 추가</h3>
-          <form id="tag-form">
-            <input type="text" id="tag-value" placeholder="태그 값" required />
-            <button type="submit" class="ms-Button">태그 추가</button>
-          </form>
-        </section>
-      </div>
-    </main>
 
-    <section id="display-msg" class="ms-welcome__main">
-      <div class="padding">
-        <h3>Message</h3>
-        <div id="message"></div>
+      <div id="list-page" class="page">
+        <div class="page-content">
+          <h2>슬라이드 목록</h2>
+          <button class="ms-Button" id="read-json">Read JSON</button><br /><br />
+          <section id="slides-list" class="ms-welcome__main">
+            <div class="padding">
+              <div id="slides-container"></div>
+            </div>
+          </section>
+        </div>
       </div>
-    </section>
+
+      <div id="add-page" class="page">
+        <div class="page-content">
+          <h2>슬라이드 추가</h2>
+          <button class="ms-Button" id="export-selected-slide">Export Selected Slide</button><br /><br />
+          <button class="ms-Button" id="insert-after-selected-slide">Insert After Selected Slide</button><br /><br />
+          <section>
+            <h3>"TOPIC" 태그 추가</h3>
+            <form id="tag-form">
+              <input type="text" id="tag-value" placeholder="태그 값" required />
+              <button type="submit" class="ms-Button">태그 추가</button>
+            </form>
+          </section>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
