--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -72,91 +72,9 @@
               </div>
             </div>
           </div>
-
-          <button class="ms-Button" id="read-json">Read JSON</button>
-          <button class="ms-Button" id="test-message">테스트 메시지</button><br /><br />
           <section id="slides-list" class="ms-welcome__main">
             <div class="padding">
-              <div id="slides-container">
-                <!-- 예시 슬라이드 아이템 추가 -->
-                <div class="slide-item">
-                  <div class="thumbnail-container">
-                    <img
-                      src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='300' height='200' viewBox='0 0 300 200'%3E%3Crect width='300' height='200' fill='%23eaeaea'/%3E%3Ctext x='50%25' y='50%25' font-family='Arial' font-size='24' text-anchor='middle' dominant-baseline='middle' fill='%23999999'%3E샘플 이미지 300x200%3C/text%3E%3C/svg%3E"
-                      alt="슬라이드 미리보기"
-                      class="slide-thumbnail"
-                    />
-                    <div class="toggle-icon" id="toggle-info">▼</div>
-                  </div>
-                  <div class="slide-info">
-                    <p>
-                      <strong>슬라이드2ㅁㄴㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇㅇ 1</strong
-                      ><span>21-02-07</span>
-                    </p>
-                  </div>
-                  <div class="tag-list">
-                    <span class="tag-item">설명</span>
-                    <span class="tag-item">비즈니스</span>
-                    <span class="tag-item">프레젠테이션</span>
-                    <span class="tag-item">설명</span>
-                    <span class="tag-item">비즈니스</span>
-                    <span class="tag-item">프레젠테이션</span>
-                    <span class="tag-item">설명</span>
-                    <span class="tag-item">비즈니스</span>
-                    <span class="tag-item">프레젠테이션</span>
-                  </div>
-                </div>
-
-                <div class="slide-item">
-                  <div class="thumbnail-container">
-                    <img
-                      src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='300' height='200' viewBox='0 0 300 200'%3E%3Crect width='300' height='200' fill='%23eaeaea'/%3E%3Ctext x='50%25' y='50%25' font-family='Arial' font-size='24' text-anchor='middle' dominant-baseline='middle' fill='%23999999'%3E샘플 이미지 300x200%3C/text%3E%3C/svg%3E"
-                      alt="슬라이드 미리보기"
-                      class="slide-thumbnail"
-                    />
-                    <div class="toggle-icon">▼</div>
-                  </div>
-                  <div class="slide-info">
-                    <p><strong>슬라이드 2</strong><span>21-02-08</span></p>
-                  </div>
-                  <div class="tag-list">
-                    <span class="tag-item">설명ㅇ</span>
-                    <span class="tag-item">비즈니스</span>
-                    <span class="tag-item">프레젠테이션</span>
-                    <span class="tag-item">설명</span>
-                    <span class="tag-item">비즈니스</span>
-                    <span class="tag-item">프레젠테이션</span>
-                    <span class="tag-item">설명</span>
-                    <span class="tag-item">비즈니스</span>
-                    <span class="tag-item">프레젠테이션</span>
-                  </div>
-                </div>
-
-                <div class="slide-item">
-                  <div class="thumbnail-container">
-                    <img
-                      src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='300' height='200' viewBox='0 0 300 200'%3E%3Crect width='300' height='200' fill='%23eaeaea'/%3E%3Ctext x='50%25' y='50%25' font-family='Arial' font-size='24' text-anchor='middle' dominant-baseline='middle' fill='%23999999'%3E샘플 이미지 300x200%3C/text%3E%3C/svg%3E"
-                      alt="슬라이드 미리보기"
-                      class="slide-thumbnail"
-                    />
-                    <div class="toggle-icon">▼</div>
-                  </div>
-                  <div class="slide-info">
-                    <p><strong>슬라이드 3</strong><span>2021-02-09</span></p>
-                  </div>
-                  <div class="tag-list">
-                    <span class="tag-item">설명</span>
-                    <span class="tag-item">비즈니스</span>
-                    <span class="tag-item">프레젠테이션</span>
-                    <span class="tag-item">설명</span>
-                    <span class="tag-item">비즈니스</span>
-                    <span class="tag-item">프레젠테이션</span>
-                    <span class="tag-item">설명</span>
-                    <span class="tag-item">비즈니스</span>
-                    <span class="tag-item">프레젠테이션</span>
-                  </div>
-                </div>
-              </div>
+              <div id="slides-container"></div>
             </div>
           </section>
         </div>
@@ -169,21 +87,16 @@
           <div class="form-container">
             <div class="form-group">
               <label for="slide-title"><span class="required">*</span> 제목</label>
-              <input type="text" id="slide-title" class="form-input" required />
+              <input type="text" id="slide-title" class="form-input" placeholder="제목을 입력하세요" required />
             </div>
 
             <div class="form-group">
               <label for="slide-tags">태그</label>
-              <input
-                name="basic"
-                placeholder="엔터로 구분하여 입력"
-                class="tagify--custom-dropdown"
-                value="tag1, tag2"
-              />
+              <input name="basic" placeholder="엔터로 구분하여 입력하세요" class="tagify--custom-dropdown" />
             </div>
 
             <div class="form-button-container">
-              <button class="ms-Button ms-Button--primary" id="add-slide-button">슬라이드 추가</button>
+              <button class="ms-Button ms-Button--primary" id="add-slide-button">슬라이드 추가하기</button>
             </div>
           </div>
         </div>
@@ -222,12 +135,18 @@
                     tags.classList.remove("overflowing");
                   }
                 });
-                allToggleIcons.forEach((icon) => (icon.textContent = "▼"));
+                allToggleIcons.forEach((icon) => {
+                  icon.textContent = "▼";
+                  icon.title = "제목 숨기기";
+                });
               } else {
                 // 접기
                 allSlideInfos.forEach((info) => info.classList.add("collapsed"));
                 allTagLists.forEach((tags) => tags.classList.add("collapsed"));
-                allToggleIcons.forEach((icon) => (icon.textContent = "▲"));
+                allToggleIcons.forEach((icon) => {
+                  icon.textContent = "▲";
+                  icon.title = "제목 보기";
+                });
               }
             });
 
@@ -264,6 +183,7 @@
               const toggleIcon = document.createElement("div");
               toggleIcon.className = "toggle-icon";
               toggleIcon.textContent = "▼";
+              toggleIcon.title = "제목 숨기기";
               thumbnailContainer.appendChild(toggleIcon);
             }
           });
