--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -55,6 +55,7 @@
       <div id="list-page" class="page">
         <div class="page-content">
           <!-- 검색창 UI 추가 (list-page 내부로 이동) -->
+          <button id="clear-cache">캐시초기화</button>
           <div id="search-container">
             <div class="search-wrapper">
               <input type="text" id="search-input" placeholder="슬라이드 검색..." />
