--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -56,7 +56,6 @@
       <div id="list-page" class="page">
         <div class="page-content">
           <!-- 검색창 UI 추가 (list-page 내부로 이동) -->
-          <button id="clear-cache">캐시초기화</button>
           <div id="search-container">
             <div class="search-wrapper">
               <input type="text" id="search-input" placeholder="슬라이드 검색..." />
@@ -67,10 +66,8 @@
             <div class="filter-options">
               <span class="filter-label">필터:</span>
               <div class="filter-tabs">
-                <button class="filter-tab active" data-filter="all">전체</button>
-                <button class="filter-tab" data-filter="title">제목</button>
+                <button class="filter-tab active" data-filter="title">제목</button>
                 <button class="filter-tab" data-filter="tag">태그</button>
-                <button class="filter-tab" data-filter="date">날짜</button>
               </div>
             </div>
           </div>
