Build for deployment

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -293,13 +293,12 @@
             <h2 class="center-title">버전 정보</h2>
           </div>
 
-          <div class="update-history-title">버전 히스토리</div>
-          <div id="update-notification" class="update-notification"></div>
+          <div class="version-detail-title">버전 히스토리</div>
+          <div id="version-detail-notification" class="version-detail-notification"></div>
 
-          <div class="update-history">
-            <div class="update-item">
-              <div class="update-version">ver. 1.0</div>
-              <ul class="update-details">
+          <div class="version-detail-history">
+            <div class="version-detail-item">
+              <div class="version-detail-version">ver. 1.0</div>        
                 <li>초기 버전 릴리스</li>
                 <li>슬라이드 저장 및 검색 기능</li>
                 <li>태그 기반 슬라이드 관리</li>
