--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -258,7 +258,7 @@
             개발자는 저장된 슬라이드를 볼 수 없습니다. <br /><br />
             추후 AI를 활용한 자동 저장, 슬라이드 공유 등의 기능을 추가될 예정입니다.
             <br /><br />
-            문의 사항은 아래 이메일로 연락 바랍니다.<br />sliderhelp10@gmail.com
+            문의 사항은 아래 이메일로 연락 바랍니다.<br />wookji.yoon@gmail.com
           </div>
         </div>
       </div>
@@ -278,7 +278,7 @@
             개발자는 저장된 슬라이드를 볼 수 없습니다. <br /><br />
             추후 AI를 활용한 자동 저장, 슬라이드 공유 등의 기능을 추가될 예정입니다.
             <br /><br />
-            문의 사항은 아래 이메일로 연락 바랍니다.<br />sliderhelp10@gmail.com
+            문의 사항은 아래 이메일로 연락 바랍니다.<br />wookji.yoon@gmail.com
           </div>
         </div>
       </div>
