배포전 최후였으면!@!

--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -16,7 +16,7 @@
   </head>
   <body class="ms-font-m ms-Fabric">
     <div id="sideload-msg">로딩 중...</div>
-    <div id="app-body" style="display: none">
+    <div id="app-body">
       <!-- 상단 헤더 추가 -->
       <div class="app-header">
         <div class="app-logo">
@@ -80,6 +80,9 @@
                 <button class="filter-tab active" data-filter="title">제목</button>
                 <button class="filter-tab" data-filter="tag">태그</button>
               </div>
+              <button id="refresh-button" class="refresh-button ms-Button">
+                <i class="ms-Icon ms-Icon--Refresh" aria-hidden="true"></i>
+              </button>
             </div>
           </div>
 
