--- a/src/taskpane/taskpane.html
+++ b/src/taskpane/taskpane.html
@@ -15,7 +15,7 @@
     <link href="taskpane.css" rel="stylesheet" type="text/css" />
   </head>
   <body class="ms-font-m ms-Fabric">
-    <div id="sideload-msg">로딩 중...</div>
+    <div id="sideload-msg">Loading...</div>
     <div id="app-body">
       <!-- 상단 헤더 추가 -->
       <div class="app-header">
